# somehaskell

./: Bboard.hs  CHANGELOG.md  HWeb.hs  LICENSE  Main.hs  Morra.hs  VM.hs  somehaskell.cabal  stack.yaml
